Update 1. Logic of Relational Databases.md

--- a/1. Logic of Relational Databases.md
+++ b/1. Logic of Relational Databases.md
@@ -32,7 +32,7 @@ Dog | Human
 :---|:---
 Snoopy | Charlie Brown
 Scooby-Doo | Shaggy
- | Anakin Skywalker
+  || Anakin Skywalker
  Alpha | Charles Muntz
  Dug | Charles Muntz
  Benji | 
