Update 1. Logic of Relational Databases.md

--- a/1. Logic of Relational Databases.md
+++ b/1. Logic of Relational Databases.md
@@ -80,7 +80,7 @@ Among the three tables, there would now be only dog attributes in the Dog table,
 
 Not only does splitting out the data make things more orderly, it reduces the overall size of the database (making it easier to store more useful information and faster to retrieve it) and makes it easier to maintain the data over time.
 
-For example, suppose Anakin Skywalker had three dogs. If we used one table for dogs and humans, there would be three rows with Anakin's name on it. If (for some reason) Anakin should change his name to Darth Vader, we would need to find and update all three of those rows, once for each dog. Instead, with a separate Human table, Anakin's name is updated *once* and any later query is able to reflect that change with no extra effort.
+For example, suppose Anakin Skywalker had three dogs. If we used one table for dogs and humans, there would be three rows with Anakin's name on it. If (for some reason) Anakin should change his name to Darth Vader, we would need to find and update all three of those rows, once for each dog. This may not seem so bad, but what if he had 100 dogs instead? (Even Sith Lords are not immune to the power of a cuddly pupper!) Instead, with a separate Human table, Anakin's name is updated *once* and any later query is able to reflect that change with no extra effort.
 
 Using ID values to reference some attributes also saves space, especially if there is a fixed number of options for that value. For example, in myEvolv, there are many tables that reference the name of the agency responsible for a site, worker, or service.
 
