Update 2. Joins and Relationships.md

--- a/2. Joins and Relationships.md
+++ b/2. Joins and Relationships.md
@@ -5,3 +5,57 @@
 # Joins and Relationships
 
 Let's revisit our first table of very good dogs.
+
+Dog_ID |Name | Sex | Coat | Has_Spots | Breed_ID
+:---|:----| :----| :----| :----| :----
+1|Snoopy | Male | White | Yes | 1
+2|Scooby-Doo | Male | Brown | Yes | 2
+3|Lassie | Female | Brown | No | 3
+4|Benji | Male | Brown | No | 4
+5|Perdita | Female | White | Yes | 5
+
+Here I have made a small modification of moving the breeds to a separate table - now the Dog table contains a foreign key reference to Breed. This will make it more efficient to represent individual dogs who may have the same breed.
+
+Breed_ID | Breed_Name
+:--- | :---
+1 | Beagle
+2 | Great Dane 
+3 | Border Collie
+4 | Mixed
+5 | Dalmatian
+
+Because the Dog table now only contains a *reference* to the breed table, we need to join the two tables in a query to see the breed for each dog.
+
+There are some things computers are not very good at: making inferences from context, enjoying a cool autumn afternoon, and appreciating a good pun among them. However, computers are very good at running through a large number of possible combinations on a short amount of time. When we execute a SQL query that joins two tables, one of the first things to happen is the database engine runs through possible combinations of values between the two tables. For illustration, here are the first five values of the possible combinations of Dog and Breed - mathematically known as a Cartesian product.
+
+Dog_ID | Name | Breed_ID | Breed_Name
+:--- | :--- | :--- | :---
+1 | Snoopy | 1 | Beagle
+1 | Snoopy | 2 | Great Dane 
+1 | Snoopy | 3 | Border Collie
+1 | Snoopy | 4 | Mixed
+1 | Snoopy | 5 | Dalmatian
+
+Now, we know that not all these combinations are valid (Snoopy being a Beagle and only a Beagle), so a second step is to filter the result down to the combinations we know are appropriate by matching the foreign key for Breed_ID from the Dog table to the primary key in the Breed table.
+
+Dog_ID |Name | Sex | Coat | Has_Spots | Breed_ID | Breed_Name
+:---|:----| :----| :----| :----| :----
+1|Snoopy | Male | White | Yes     | 1  | Beagle
+2|Scooby-Doo | Male | Brown | Yes | 2  | Great Dane 
+3|Lassie | Female | Brown |    No | 3  | Border Collie
+4|Benji | Male | Brown | No       | 4  | Mixed
+5|Perdita | Female | White | Yes  | 5  | Dalmatian
+
+In SQL, this can be accomplished in two similar ways. The first explicitly states the Cartesian product (called here a `CROSS JOIN`):
+
+```sql
+SELECT
+Dog.*
+Breed.Breed_Name
+FROM Dog
+CROSS JOIN Breed
+WHERE Dog.Breed_ID = Breed.Breed_ID
+```
+
+We will discuss the second approach (an `INNER JOIN`) in the next lesson.
+
