Update 1. Logic of Relational Databases.md

--- a/1. Logic of Relational Databases.md
+++ b/1. Logic of Relational Databases.md
@@ -65,7 +65,7 @@ ID | Human
 5 | Roger Radcliffe
 6 | Anita Radcliffe
 
-Note we left Perdita without a human companion. In an even better design, we could remove the Human_ID from the Dog table and move it to a third, Dog_Human_Link table
+Note we left Perdita without a human companion. In an even better design, we could remove the Human_ID from the Dog table and move it to a third, Dog_Human_Link table containing its own primary key (each entry representing a specific combination of Dog and Human), a foreign key for the dog, and a foreign key for the human.
 
 ID | Dog_ID | Human_ID
 :---|:---|:---
