Update 2. Joins and Relationships.md

--- a/2. Joins and Relationships.md
+++ b/2. Joins and Relationships.md
@@ -57,5 +57,9 @@ CROSS JOIN Breed
 WHERE Dog.Breed_ID = Breed.Breed_ID
 ```
 
-We will discuss the second approach (an `INNER JOIN`) in the next lesson.
+We will discuss the second approach (an `INNER JOIN`) in a little while.
+
+For now, it is worth noting that we are not required to match rows based on equality; we can also match based on inequalities. For example, if we had an indicator of a dog's weight in the Dog table, we could create a query that matches each dog with another dog who is bigger, using something like `Dog.Weight < Larger_Dog.Weight`.
+
+## Types of Relationships
 
