Update 2. Joins and Relationships.md

--- a/2. Joins and Relationships.md
+++ b/2. Joins and Relationships.md
@@ -1,6 +1,7 @@
 *Simplicity does not precede complexity, but follows it.*
 
-\- Alan Perlis *Epigrams on Programming*
+\- Alan Perlis 
+*Epigrams on Programming*
 
 # Joins and Relationships
 
@@ -63,3 +64,25 @@ For now, it is worth noting that we are not required to match rows based on equa
 
 ## Types of Relationships
 
+All relationships between tables are considered in pairs of tables. Joining multiple tables therefore boils down to linking pairs of tables in a sequence. 
+
+Relationships between tables can be described according to two axes (for a total of six types of relationship):
+Is the relationship **mandatory** or **optional**?
+- If mandatory, every entry in the first table *must* have a corresponding entry in the second table
+- If optional, any entry in the first table may or may not have a corresponding entry in the second
+
+Note that these requirements are not necessarily symmetrical. For example, suppose we had a table in our Good Dogs Database to track administration of heartworm medication. Every dose has to be associated with a dog, but some lucky pups do not have a heartworm infection and therefore never receive the medication.
+
+Table relationships can also be described according to the maximum number of matches in each table:
+- In a **one-to-one** relationship, an entry in the first table can only match one entry in the second table. For example, suppose we had a table listing each dog's favorite toy (we're assuming each dog has one favorite selected). Each toy belongs to one dog, and each dog has one favorite.
+- In a **one-to-many** relationship, an entry in the first table can match multiple entries in the second. Going back to the medication example above, a dog may receive many doses of heartworm medication over its fluffy, joyful life (once every six months per label instructions).
+- In a **many-to_many** relationship, each entry in the first table can associate with multiple records in the second table and each in the second with multiple records in the first. This is often reflected as a three-table pattern, like the Dogs-Dogs_Humans_Link-Humans example in Lesson 1.
+
+## Types of Joins
+
+There are three common types of join operations between tables. The differences between these joins is in how they tolerate missing (NULL) values.
+- *INNER JOIN* - Only records that match between the two tables are kept. If a record in either table has a null value for the join condition, that record is excluded from the result.
+- *LEFT OUTER JOIN* - All records from the first table are kept. Records from the second table are included if they match the first table on the join criterion, otherwise a NULL indicates no match was found in the second table.
+- *FULL OUTER JOIN* - All records from both tables are kept. If a record does not have a match in the other table, then a NULL indicates no match was found in the other table.
+
+Observant readers may wonder why there is a "LEFT" join but not a "RIGHT" join. The answer is that right joins are sometimes supported, but they can also be performed by switching the order of the tables, e.g., `A RIGHT JOIN B` is equivalent to `B LEFT JOIN A`.
