--- a/2. Joins and Relationships.md
+++ b/2. Joins and Relationships.md
@@ -80,9 +80,13 @@ Table relationships can also be described according to the maximum number of mat
 
 ## Types of Joins
 
+Consider the following Venn Diagram.
+
+![A Venn Diagram](Venn%20Diagram.png)
+
 There are three common types of join operations between tables. The differences between these joins is in how they tolerate missing (NULL) values.
-- *INNER JOIN* - Only records that match between the two tables are kept. If a record in either table has a null value for the join condition, that record is excluded from the result.
-- *LEFT OUTER JOIN* - All records from the first table are kept. Records from the second table are included if they match the first table on the join criterion, otherwise a NULL indicates no match was found in the second table.
-- *FULL OUTER JOIN* - All records from both tables are kept. If a record does not have a match in the other table, then a NULL indicates no match was found in the other table.
+- *INNER JOIN* - Only records that match between the two tables are kept. If a record in either table has a null value for the join condition, that record is excluded from the result. This corresponds to Section B only of the Venn Diagram.
+- *LEFT OUTER JOIN* - All records from the first table are kept. Records from the second table are included if they match the first table on the join criterion, otherwise a NULL indicates no match was found in the second table. This would correspond to Sections A + B in the Venn Diagram.
+- *FULL OUTER JOIN* - All records from both tables are kept. If a record does not have a match in the other table, then a NULL indicates no match was found in the other table. This would correspond to Sections A + B + C in the Venn Diagram.
 
 Observant readers may wonder why there is a "LEFT" join but not a "RIGHT" join. The answer is that right joins are sometimes supported, but they can also be performed by switching the order of the tables, e.g., `A RIGHT JOIN B` is equivalent to `B LEFT JOIN A`.
