Update 2. Joins and Relationships.md

--- a/2. Joins and Relationships.md
+++ b/2. Joins and Relationships.md
@@ -96,3 +96,13 @@ B | | No | Yes | Yes
  || C | No | No | Yes
 
 Observant readers may wonder why there is a "LEFT" join but not a "RIGHT" join. The answer is that right joins are sometimes supported, but they can also be performed by switching the order of the tables, e.g., `A RIGHT JOIN B` is equivalent to `B LEFT JOIN A`.
+
+When conducting an inner or outer join, we specify a *join condition*, a logical rule that dictates whether a row will make it into the final result or not. This rule must result in a Boolean value (true or false). If the resulting value is true, then the record is kept. Join conditions are specified with the `ON` keyword and each inner or outer join requires **at least** one condition. A join can have multiple conditions, but additional conditions can also be specified in the `WHERE` clause like in the `CROSS JOIN` example above.
+
+```sql
+SELECT
+Dog.*
+Breed.Breed_Name
+FROM Dog
+INNER JOIN Breed ON Dog.Breed_ID = Breed.Breed_ID
+```
