Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -1,4 +1,6 @@
-Here we will discuss the basic clauses of a SQL statement: SELECT, FROM, and WHERE. 
+# The Query Structure
+
+A SQL query is formatted in a statement which describes the shape and structure of the outputted data. Each statement will comprise clauses, which each convey a specifc aspect of the data requested. Here we will discuss the basic clauses of a SQL statement: SELECT, FROM, and WHERE. In the next lesson, we will discuss some further clauses.
 
 Suppose I wanted to bake a pie, and asked you to go find me a pumpkin, at the local pumpkin patch, that is ripe and at least 10 lb in weight. You go to the patch, but this late in the season there are only three left: 
 * one is ripe, but only weighs 5 lb
