Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -20,7 +20,34 @@ WHERE is_ripe = 1 AND pumpkin_weight >= 10
 ```
 
 ## SELECT
+In the select clause, we indicate which _columns_ from the result set we want to display. 
 
+For example, let's talk about dogs.
+
+![¡Que guapo perrito!](https://upload.wikimedia.org/wikipedia/commons/e/e0/Youngtoyxolo.jpg
+
+<details>
+  <summary>
+We have a list of very good dogs <a href = "https://github.com/HFS-Analytics/SQL-Overview/blob/main/Adoption%20Record.md"> here</a>)
+    </summary>
+**Note:** These are fictional dogs generated from data provided by <a href = "https://akc.org"> the American Kennel Club</a>. Any resemblence to actual dogs, living or in Heaven, is completely coincidental.
+  
+</details>
+
+Here are the first five rows for reference:
+
+ID|Name|Sex|Breed|Weight|Age|Adoption_Date
+:---:|:---:|:---:|:---:|:---:|:---:|:---:
+1|LUNA|Female|Italian Greyhounds|11|0|2022-09-04
+2|BELLA|Female|Schipperkes|13|9|2022-06-02
+3|DAISY|Female|Pointers|50|12|2022-06-18
+4|LUCY|Female|Spaniels|30|2|2022-03-09
+5|BAILEY|Female|Finnish Lapphunds|41|6|2022-05-26
+
+In a query, especially one drawing from multiple tables, we may come across columns we d not need in order to answer our current question or which provide us redundant information. Explicitly listing out the columns we want helps assure that the information we need does not get lost among the data we don't. *However, we have the option to pull in all columns from the result set using `SELECT *` or all columns from a particular table using `SELECT Table_Name.*`
+
+
+      
 ## FROM
 
 ## WHERE
