Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -19,12 +19,14 @@ FROM pumpkin_patch
 WHERE is_ripe = 1 AND pumpkin_weight >= 10
 ```
 
+From here, we will discuss in more detail how queries are phrased. Please note that SQL is **not** case-sensitive, but I will tend to capitalize keywords defined in the language as a convention.
+
 ## SELECT
-In the select clause, we indicate which _columns_ from the result set we want to display. 
+In the select clause, we indicate which _columns_ from the result set we want to display. Commas will separate each column in the list, but common mistakes include omitting commas between columns and adding a comma after the last column.
 
 For example, let's talk about dogs.
 
-![¡Que guapo perrito!](https://upload.wikimedia.org/wikipedia/commons/e/e0/Youngtoyxolo.jpg
+![¡Qué guapo perrito!](https://upload.wikimedia.org/wikipedia/commons/e/e0/Youngtoyxolo.jpg
 
 <details>
   <summary>
@@ -36,6 +38,18 @@ We have a list of very good dogs <a href = "https://github.com/HFS-Analytics/SQL
 
 Here are the first five rows for reference:
 
+```sql
+SELECT TOP 5
+ID,
+Name,
+Sex,
+Breed,
+Weight,
+Age,
+Adoption_Date
+From Adoption_Record
+```
+
 ID|Name|Sex|Breed|Weight|Age|Adoption_Date
 :---:|:---:|:---:|:---:|:---:|:---:|:---:
 1|LUNA|Female|Italian Greyhounds|11|0|2022-09-04
@@ -44,10 +58,105 @@ ID|Name|Sex|Breed|Weight|Age|Adoption_Date
 4|LUCY|Female|Spaniels|30|2|2022-03-09
 5|BAILEY|Female|Finnish Lapphunds|41|6|2022-05-26
 
-In a query, especially one drawing from multiple tables, we may come across columns we d not need in order to answer our current question or which provide us redundant information. Explicitly listing out the columns we want helps assure that the information we need does not get lost among the data we don't. *However, we have the option to pull in all columns from the result set using `SELECT *` or all columns from a particular table using `SELECT Table_Name.*`
+Thw `TOP` keyword after select limits the result set to the first 5 records.
 
+In a query, especially one drawing from multiple tables, we may come across columns we do not need in order to answer our current question or which provide us redundant information. Explicitly listing out the columns we want helps assure that the information we need does not get lost among the data we don't. *However, we have the option to pull in all columns from the result set using `SELECT *` or all columns from a particular table using `SELECT Table_Name.*`
 
-      
+Column specifications in the SELECT statement follow this pattern:
+`TABLE_NAME.COLUMN_NAME AS ALIAS`
+
+Including the column name helps ensure we get the correct column, especially when multiple tables contain a column with the same name. For example, both dogs and humans have names, but many humans will take offense if you call them by the dog's name (though most dogs don't seem to mind whose name you use).
+
+An alias is a temporary name (only reflected in the output of the query) that we can assign to a column to make it easier to read or to recognize what it represents. This is particularly useful to distinguish multiple columns that have the same name within their respective tables, or to label the result of a calculation. Aliases only apply to the result, so if a column is referenced more than once or is referenced outside the `SELECT` clause, the alias will not be understood.
+
+```sql
+SELECT
+Name AS Pupper,
+Breed,
+Age * 7 as Age_in_Dog_Years
+FROM Adoption_Record
+```
+
+*Note:* The `AS` keyword is optional, and `Name AS Pupper` is equivalent to `Name Pupper`, but the former is easier to read. In the following query, we make the mistake of leaving out a comma between the two column names:
+
+```sql
+SELECT
+Name
+Breed
+From Adoption_Record
+```
+
+The result will be the contents of the `Name` column, but with an alias of `Breed`, so be careful to place commas where appropriate.
+
+### Calculations
+
+We can also define new columns within the `SELECT` clause. 
+
+**Constant values** (all rows have the same value within a query) are defined by typing the single value for the constant and assigning it an alias:
+
+```sql
+SELECT
+Name,
+10 AS Goodness
+From Adoption_Record
+```
+
+The above query will return each dog's name with a goodness rating of 10 for each (they are all good dogs, after all).
+
+**Mathematical Operators** can be placed between two values to produce a result applied to each row of the result set, e.g.,
+
+```sql
+SELECT Age + Weight
+FROM Adoption_Record
+```
+
+Operator | Use 
+|:---:|:---
+\+ | Addition
+\- | Subtraction
+\* | Multiplication
+/ | Division
+
+The addition operator (\+) can also be used to combine text:
+```sql
+SELECT
+2 + 2 -- yields 4
+"Bow" + "-" + "wow!" -- yields 'Bow-wow!'
+```
+
+**Boolean Operators** 
+
+The following operators compare two values and test for equality or inequality:
+
+Operator | Use 
+|:---:|:---
+= | Equal to
+<> | Not Equal to
+< | Less Than
+<= | Less Than or Equal to
+\> | Greater Than
+\>= | Greater Than or Equal to
+
+A `NOT` before a logical test also negates the test, so `1 <> 2` is equivalent to `NOT (1 = 2)`
+
+Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, "Mixed")` would give the breed for each dog, but if a dog's breed is not known, it will insert "Mixed", and we can test whether `ISNULL(Breed, "Mixed") = "Xoloitzcuintli"`.
+
+`CASE` statements are also useful for reflecting branching logic according to the value of one or more columns. The statement starts with `CASE`, ends with `END`, and between are pairs of logical conditions and output values. These tests are conducted in order and the first test to be true determines the result of the calculation.
+
+ ```sql
+ SELECT
+ CASE
+   WHEN Age <= 1 THEN "Just a pup!"
+   WHEN Age > 10 THEN "A senior dog"
+   ELSE "A very good dog"
+ END AS Age_Group
+ FROM Adoption_Record
+  ```
+  
+  `IF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IF(Sex = "Female", "A good girl!", "A good dog!")`
+  
+SQL does not have a single data type that directly represents true or false values, so we will often use 1 and 0, respectively as the result of `CASE` or `IF` when all we want is an indicator of whether or not a condition is true.
+
 ## FROM
 
 ## WHERE
