Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -26,7 +26,7 @@ In the select clause, we indicate which _columns_ from the result set we want to
 
 For example, let's talk about dogs.
 
-![¡Qué guapo perrito!](https://upload.wikimedia.org/wikipedia/commons/e/e0/Youngtoyxolo.jpg
+![¡Qué guapo!](https://upload.wikimedia.org/wikipedia/commons/e/e0/Youngtoyxolo.jpg)
 
 <details>
   <summary>
@@ -139,7 +139,7 @@ Operator | Use
 
 A `NOT` before a logical test also negates the test, so `1 <> 2` is equivalent to `NOT (1 = 2)`
 
-Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, "Mixed")` would give the breed for each dog, but if a dog's breed is not known, it will insert "Mixed", and we can test whether `ISNULL(Breed, "Mixed") = "Xoloitzcuintli"`.
+Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, "")` would give the breed for each dog, but if a dog's breed is not known, it will insert an empty string (the emptiness between the two quotation marks), and we can test whether `ISNULL(Breed, "") = "Xoloitzcuintli"`.
 
 `CASE` statements are also useful for reflecting branching logic according to the value of one or more columns. The statement starts with `CASE`, ends with `END`, and between are pairs of logical conditions and output values. These tests are conducted in order and the first test to be true determines the result of the calculation.
 
