Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -19,7 +19,7 @@ FROM pumpkin_patch
 WHERE is_ripe = 1 AND pumpkin_weight >= 10
 ```
 
-From here, we will discuss in more detail how queries are phrased. Please note that SQL is **not** case-sensitive, but I will tend to capitalize keywords defined in the language as a convention.
+From here, we will discuss in more detail how queries are phrased. Please note that SQL is **not** case-sensitive, but I will tend to capitalize keywords defined in the language as a convention. SQL also generally does not care about line breaks and a query can be written in a single line or across multiple lines. However, I will strive to use line breaks to emphasize the order and structure of each query.
 
 ## SELECT
 In the select clause, we indicate which _columns_ from the result set we want to display. Commas will separate each column in the list, but common mistakes include omitting commas between columns and adding a comma after the last column.
