Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -137,11 +137,28 @@ Operator | Use
 \> | Greater Than
 \>= | Greater Than or Equal to
 
-A `NOT` before a logical test also negates the test, so `1 <> 2` is equivalent to `NOT (1 = 2)`
+Inequalities between numeric values are conducted as most people would expect.
+*  `3 < 10` is true
+*  `10 < 3` is false
 
-Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, "")` would give the breed for each dog, but if a dog's breed is not known, it will insert an empty string (the emptiness between the two quotation marks), and we can test whether `ISNULL(Breed, "") = "Xoloitzcuintli"`.
+However, text values can also be compared as inequalities, using lexical (dictionary) ordering, meaning < and > test whether the first value is alphabetically before or after the second value.
+* `"a" < "z"` is true
+* `"dogs" > "cats"` is true
+* `"3" < "10"` is false, because `"3"` and `"10"` are treated as text (strings of characters), and "3" comes 'alphabetically' after "1"
 
-`CASE` statements are also useful for reflecting branching logic according to the value of one or more columns. The statement starts with `CASE`, ends with `END`, and between are pairs of logical conditions and output values. These tests are conducted in order and the first test to be true determines the result of the calculation.
+This leads into another feature that surprises a lot of people: dates are formatted as YYYY-MM-DD, or year-month-day. For example:
+* December 7, 1941 is `1941-12-07`
+* The earliest date that can be represented is often [January 1, 1753](https://stackoverflow.com/questions/3310569/what-is-the-significance-of-1-1-1753-in-sql-server), or `1753-01-01`
+* The latest date that can be represented is often December 31, 9999, or `9999-12-31`
+
+A benefit here is that dates can be represented as strings and compared in dictionary order.
+* `2022-09-19` is before `2023-01-01` both chronologically and alphabetically, but `09/19/2022` would not be alphabetically before '01/01/2023'
+
+**Negation:** A `NOT` before a logical test also negates the test, so `1 <> 2` is equivalent to `NOT (1 = 2)`
+
+**Null:** Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, "")` would give the breed for each dog, but if a dog's breed is not known, it will insert an empty string (the emptiness between the two quotation marks), and we can test whether `ISNULL(Breed, "") = "Xoloitzcuintli"`.
+
+**Branching logic:** `CASE` statements are also useful for reflecting branching logic according to the value of one or more columns. The statement starts with `CASE`, ends with `END`, and between are pairs of logical conditions and output values. These tests are conducted in order and the first test to be true determines the result of the calculation.
 
  ```sql
  SELECT
@@ -153,9 +170,9 @@ Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to
  FROM Adoption_Record
   ```
   
-  `IF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IF(Sex = "Female", "A good girl!", "A good dog!")`
+  `IIF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IIF(Sex = "Female", "A good girl!", "A good dog!")`
   
-SQL does not have a single data type that directly represents true or false values, so we will often use 1 and 0, respectively as the result of `CASE` or `IF` when all we want is an indicator of whether or not a condition is true.
+SQL does not have a single data type that directly represents true or false values, so we will often use 1 and 0, respectively as the result of `CASE` or `IIF` when all we want is an indicator of whether or not a condition is true.
 
 ## FROM
 
