Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -30,7 +30,7 @@ For example, let's talk about dogs.
 
 <details>
   <summary>
-We have a list of very good dogs <a href = "https://github.com/HFS-Analytics/SQL-Overview/blob/main/Adoption%20Record.md"> here</a>)
+Heartland Family Shelter (HFS) is a non-profit, no-kill shelter finding homes for very good dogs since 1870. We have a list of very good dogs adopted from the shelter <a href = "https://github.com/HFS-Analytics/SQL-Overview/blob/main/Dogs.csv"> here</a>)
     </summary>
 **Note:** These are fictional dogs generated from data provided by <a href = "https://akc.org"> the American Kennel Club</a>. Any resemblence to actual dogs, living or in Heaven, is completely coincidental.
   
@@ -40,23 +40,31 @@ Here are the first five rows for reference:
 
 ```sql
 SELECT TOP 5
-ID,
-Name,
+Dog_ID,
+Dog_Name,
 Sex,
-Breed,
+Breed_ID,
 Weight,
-Age,
-Adoption_Date
+Age_at_Intake,
+Fixed_at_Intake
 From Adoption_Record
 ```
 
-ID|Name|Sex|Breed|Weight|Age|Adoption_Date
+Dog_ID|Dog_Name|Sex|Breed_ID|Weight|Age_at_Intake|Fixed_at_Intake
 :---:|:---:|:---:|:---:|:---:|:---:|:---:
-1|LUNA|Female|Italian Greyhounds|11|0|2022-09-04
-2|BELLA|Female|Schipperkes|13|9|2022-06-02
-3|DAISY|Female|Pointers|50|12|2022-06-18
-4|LUCY|Female|Spaniels|30|2|2022-03-09
-5|BAILEY|Female|Finnish Lapphunds|41|6|2022-05-26
+1|LUNA|Female|86|11|0|0
+2|BELLA|Female|140|13|9|0
+3|DAISY|Female|120|50|12|0
+4|LUCY|Female|153|30|2|0
+5|BAILEY|Female|174|41|6|0
+
+The columns here represent:
+* a unique ID number for each dog, 
+* the dog's name, sex (male or female), 
+* an ID number for the dog's breed, 
+* a weight measurement (in pounds) collected at intake, 
+* the dog's estimated age (in human years) at intake, and 
+* an indicator for whether or not the dog was already spayed or neutered ("fixed") at the time of intake into the shelter (1 = yes, 0 = no)
 
 Thw `TOP` keyword after select limits the result set to the first 5 records.
 
@@ -70,23 +78,39 @@ Including the column name helps ensure we get the correct column, especially whe
 An alias is a temporary name (only reflected in the output of the query) that we can assign to a column to make it easier to read or to recognize what it represents. This is particularly useful to distinguish multiple columns that have the same name within their respective tables, or to label the result of a calculation. Aliases only apply to the result, so if a column is referenced more than once or is referenced outside the `SELECT` clause, the alias will not be understood.
 
 ```sql
-SELECT
+SELECT TOP 5
 Name AS Pupper,
-Breed,
-Age * 7 as Age_in_Dog_Years
-FROM Adoption_Record
+Breed_ID,
+Age_at_Intake * 7 as Age_in_Dog_Years
+FROM Dogs
 ```
+
+Pupper|Breed_ID|Age_in_Dog_Years
+:---:|:---:|:---:|
+LUNA|86|0
+BELLA|140|63
+DAISY|120|84
+LUCY|153|14
+BAILEY|174|42
 
 *Note:* The `AS` keyword is optional, and `Name AS Pupper` is equivalent to `Name Pupper`, but the former is easier to read. In the following query, we make the mistake of leaving out a comma between the two column names:
 
 ```sql
-SELECT
-Name
-Breed
-From Adoption_Record
+SELECT TOP 5
+Dog_Name
+Breed_ID
+From Dogs
 ```
 
-The result will be the contents of the `Name` column, but with an alias of `Breed`, so be careful to place commas where appropriate.
+Breed_ID
+:---:|
+LUNA
+BELLA
+DAISY
+LUCY
+BAILEY
+
+The result will be the contents of the `Name` column, but with an alias of `Breed_ID`, so be careful to place commas where appropriate.
 
 ### Calculations
 
@@ -95,20 +119,38 @@ We can also define new columns within the `SELECT` clause.
 **Constant values** (all rows have the same value within a query) are defined by typing the single value for the constant and assigning it an alias:
 
 ```sql
-SELECT
-Name,
+SELECT TOP 5
+Dog_Name,
 10 AS Goodness
-From Adoption_Record
+From Dogs
 ```
+
+Dog_Name|Goodness
+:---:|:---:|
+LUNA|10
+BELLA|10
+DAISY|10
+LUCY|10
+BAILEY|10
 
 The above query will return each dog's name with a goodness rating of 10 for each (they are all good dogs, after all).
 
 **Mathematical Operators** can be placed between two values to produce a result applied to each row of the result set, e.g.,
 
 ```sql
-SELECT Age + Weight
-FROM Adoption_Record
+SELECT top 5
+Dog_Name,
+Age_at_Intake + Weight as Age_Weight
+FROM Dogs
 ```
+
+Dog_Name|Age_Weight
+:---:|:---:
+LUNA|11
+BELLA|22
+DAISY|62
+LUCY|32
+BAILEY|47
 
 Operator | Use 
 |:---:|:---
@@ -123,6 +165,26 @@ SELECT
 2 + 2 -- yields 4
 "Bow" + "-" + "wow!" -- yields 'Bow-wow!'
 ```
+
+**Branching logic:** `CASE` statements and the `IIF` function are useful for reflecting branching logic according to the value of one or more columns. The statement starts with `CASE`, ends with `END`, and between are pairs of logical conditions and output values. These tests are conducted in order and the first test to be true determines the result of the calculation. Both of these features rely on Boolean logic, which is described a little more fully under the `WHERE` section below.
+
+ ```sql
+ SELECT
+ CASE
+   WHEN Age <= 1 THEN "Just a pup!"
+   WHEN Age > 10 THEN "A senior dog"
+   ELSE "A very good dog"
+ END AS Age_Group
+ FROM Adoption_Record
+  ```
+  
+  `IIF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IIF(Sex = "Female", "A good girl!", "A good dog!")`
+  
+SQL does not have a single data type that directly represents true or false values, so we will often use 1 and 0, respectively as the result of `CASE` or `IIF` when all we want is an indicator of whether or not a condition is true.
+
+## FROM
+
+## WHERE
 
 **Boolean Operators** 
 
@@ -157,23 +219,3 @@ A benefit here is that dates can be represented as strings and compared in dicti
 **Negation:** A `NOT` before a logical test also negates the test, so `1 <> 2` is equivalent to `NOT (1 = 2)`
 
 **Null:** Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, "")` would give the breed for each dog, but if a dog's breed is not known, it will insert an empty string (the emptiness between the two quotation marks), and we can test whether `ISNULL(Breed, "") = "Xoloitzcuintli"`.
-
-**Branching logic:** `CASE` statements are also useful for reflecting branching logic according to the value of one or more columns. The statement starts with `CASE`, ends with `END`, and between are pairs of logical conditions and output values. These tests are conducted in order and the first test to be true determines the result of the calculation.
-
- ```sql
- SELECT
- CASE
-   WHEN Age <= 1 THEN "Just a pup!"
-   WHEN Age > 10 THEN "A senior dog"
-   ELSE "A very good dog"
- END AS Age_Group
- FROM Adoption_Record
-  ```
-  
-  `IIF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IIF(Sex = "Female", "A good girl!", "A good dog!")`
-  
-SQL does not have a single data type that directly represents true or false values, so we will often use 1 and 0, respectively as the result of `CASE` or `IIF` when all we want is an indicator of whether or not a condition is true.
-
-## FROM
-
-## WHERE
