Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -169,14 +169,23 @@ SELECT
 **Branching logic:** `CASE` statements and the `IIF` function are useful for reflecting branching logic according to the value of one or more columns. The statement starts with `CASE`, ends with `END`, and between are pairs of logical conditions and output values. These tests are conducted in order and the first test to be true determines the result of the calculation. Both of these features rely on Boolean logic, which is described a little more fully under the `WHERE` section below.
 
  ```sql
- SELECT
+ SELECT TOP 5
+ Dog_Name,
  CASE
    WHEN Age <= 1 THEN "Just a pup!"
    WHEN Age > 10 THEN "A senior dog"
    ELSE "A very good dog"
  END AS Age_Group
- FROM Adoption_Record
+ FROM Dogs
   ```
+  
+Dog_Name|Age_Group
+:---:|:---:
+LUNA|Just a Pup!
+BELLA|A very good dog
+DAISY|A senior dog
+LUCY|A very good dog
+BAILEY|A very good dog
   
   `IIF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IIF(Sex = "Female", "A good girl!", "A good dog!")`
   
