--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -172,9 +172,9 @@ SELECT
  SELECT TOP 5
  Dog_Name,
  CASE
-   WHEN Age <= 1 THEN "Just a pup!"
-   WHEN Age > 10 THEN "A senior dog"
-   ELSE "A very good dog"
+   WHEN Age <= 1 THEN 'Just a pup!'
+   WHEN Age > 10 THEN 'A senior dog'
+   ELSE 'A very good dog'
  END AS Age_Group
  FROM Dogs
   ```
@@ -187,7 +187,9 @@ DAISY|A senior dog
 LUCY|A very good dog
 BAILEY|A very good dog
   
-  `IIF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IIF(Sex = "Female", "A good girl!", "A good dog!")`
+  `IIF` evaluates a test in the first argument, then returns the value of the second argument if true, or the second if false, e.g., `IIF(Sex = 'Female', 'A good girl!', 'A good dog!')`
+  
+*Note: Use single quotes `'` to mark text strings. Double quotes (`"`) are an alternative way to indicate a column name and can lead to unexpected results.*
   
 SQL does not have a single data type that directly represents true or false values, so we will often use 1 and 0, respectively as the result of `CASE` or `IIF` when all we want is an indicator of whether or not a condition is true.
 
