--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -197,6 +197,34 @@ SQL does not have a single data type that directly represents true or false valu
 
 ## WHERE
 
+The `WHERE` clause filters the result set we create in the `FROM` clause down to the rows we want to keep. The `WHERE` clause amounts to a long logical test applied to each row. If the result is true then the row is kept; otherwise it is removed from the result set.
+
+For example, HFS received the following request:
+
+> I want to adopt a senior dog for my family (at least 10 years old). We'd like a boy dog. We want him to be a mixed breed and our daughter wants a big dog. Like, really big, at least 70 pounds!
+
+This translates to the following query:
+
+```SQL
+SELECT
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Dogs.Sex,
+Dogs.Weight
+FROM Dogs
+INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
+WHERE Breeds.Breed_Name = 'Mixed' 
+and Dogs.Sex = 'Male' 
+and Dogs.Weight > 70
+```
+
+which finds this result:
+
+Dog_Name | Breed_Name |Sex  |Weight| Age_At_Intake
+:---:|:---:|:---:|:---:|:---:|
+LINCOLN  |Mixed| Male      |     74       | 15
+ 
+
 **Boolean Operators** 
 
 The following operators compare two values and test for equality or inequality:
@@ -229,4 +257,62 @@ A benefit here is that dates can be represented as strings and compared in dicti
 
 **Negation:** A `NOT` before a logical test also negates the test, so `1 <> 2` is equivalent to `NOT (1 = 2)`
 
-**Null:** Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, "")` would give the breed for each dog, but if a dog's breed is not known, it will insert an empty string (the emptiness between the two quotation marks), and we can test whether `ISNULL(Breed, "") = "Xoloitzcuintli"`.
+**Null:** Boolean tests return NULL when any value is compared to NULL, so use `ISNULL` to supply a default value. For example `ISNULL(Breed, '')` would give the breed for each dog, but if a dog's breed is not known, it will insert an empty string (the emptiness between the two quotation marks), and we can test whether `ISNULL(Breed, '') = 'Xoloitzcuintli'`.
+
+We can **combine comparisons** using `AND` and `OR`. 
+* Two comparisons combined with `AND` will result in true if both comparisons are true; otherwise it is false. 
+* Two comparisons combined with `OR` will result in true if either the first or the second is true, or if both are true.
+
+Using `OR` can be tricky, though. Consider the following request:
+
+> I want to find a pure-bred dog (no mixed breeds, please) for my grandmother. She's a little unsteady on her feet and we're worried about a large or energetic dog knocking her over, so we'd like to find one less than 10 pounds or more than 10 years old.
+
+We write the following query:
+
+```sql
+SELECT TOP 10
+Dogs.Dog_Name,
+Breeds.Breed_Name,
+Dogs.Sex,
+Dogs.Weight
+FROM Dogs
+INNER JOIN Breeds on Dogs.Breed_ID = Breeds.Breed_ID
+WHERE 
+Breeds.Breed_name <> 'Mixed' 
+and Dogs.Weight < 10 
+or Dogs.Age_at_Intake > 10
+```
+with this result:
+
+Dog_Name|                      Breed_Name|    Sex|Weight
+:---:|:---:|:---:|:---:|
+   DAISY|                        Pointers| Female|    50
+    NALA|                        Shih Tzu| Female|     8
+   ELLIE|                        Harriers| Female|    52
+   SADIE|                     Schipperkes| Female|    11
+    RUBY|                        Shih Tzu| Female|    13
+ ROSIE|                           Mixed| Female|    15
+    LOLA|                        Samoyeds| Female|    46
+    COCO|             Miniature Pinschers| Female|     9
+  HARLEY|                      Chow Chows| Female|    63
+    ROXY| American Staffordshire Terriers| Female|    40
+    
+Now hold on a minute! Rosie the mutt made it onto this list, even though we specifically asked for mixed breeds to be excluded with `Breeds.Breed_Name <> 'Mixed'`! What happened?
+
+To find out, let's take a look back at the `WHERE` clause we wrote:
+
+``` sql
+WHERE 
+Breeds.Breed_name <> 'Mixed' 
+and Dogs.Weight < 10 
+or Dogs.Age_at_Intake > 10
+```
+
+We actually asked for a dog to be included if it met one of two criteria: either it is a small pure-bred (`Breeds.Breed_name <> 'Mixed' and Dogs.Weight < 10`) or it is an older dog, regardless of breed. We can clarify what we wanted by adding parentheses to group the comparisons and to make sure the `OR` comparison comes first.
+
+``` sql
+WHERE 
+Breeds.Breed_name <> 'Mixed' 
+(and Dogs.Weight < 10 
+or Dogs.Age_at_Intake > 10)
+```
