Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -47,7 +47,7 @@ Breed_ID,
 Weight,
 Age_at_Intake,
 Fixed_at_Intake
-From Adoption_Record
+From Dogs
 ```
 
 Dog_ID|Dog_Name|Sex|Breed_ID|Weight|Age_at_Intake|Fixed_at_Intake
