Update 3. SQL Statements 1.md

--- a/3. SQL Statements 1.md
+++ b/3. SQL Statements 1.md
@@ -284,20 +284,20 @@ or Dogs.Age_at_Intake > 10
 ```
 with this result:
 
-Dog_Name|                      Breed_Name|    Sex|Weight
-:---:|:---:|:---:|:---:|
-   DAISY|                        Pointers| Female|    50
-    NALA|                        Shih Tzu| Female|     8
-   ELLIE|                        Harriers| Female|    52
-   SADIE|                     Schipperkes| Female|    11
-    RUBY|                        Shih Tzu| Female|    13
- ROSIE|                           Mixed| Female|    15
-    LOLA|                        Samoyeds| Female|    46
-    COCO|             Miniature Pinschers| Female|     9
-  HARLEY|                      Chow Chows| Female|    63
-    ROXY| American Staffordshire Terriers| Female|    40
+Dog_Name|Breed_Name|Sex|Weight
+:---:|:---:|:---:|:---:
+DAISY|                        Pointers| Female|    50
+NALA|                        Shih Tzu| Female|     8
+ELLIE|                        Harriers| Female|    52
+SADIE|                     Schipperkes| Female|    11
+RUBY|                        Shih Tzu| Female|    13
+<span style="color:blue">ROSIE|                           Mixed| Female|    15</span>
+LOLA|                        Samoyeds| Female|    46
+COCO|             Miniature Pinschers| Female|     9
+HARLEY|                      Chow Chows| Female|    63
+ROXY| American Staffordshire Terriers| Female|    40
     
-Now hold on a minute! Rosie the mutt made it onto this list, even though we specifically asked for mixed breeds to be excluded with `Breeds.Breed_Name <> 'Mixed'`! What happened?
+Now hold on a minute! Rosie the mutt made it onto this list (right in the middle of the result), even though we specifically asked for mixed breeds to be excluded with `Breeds.Breed_Name <> 'Mixed'`! What happened?
 
 To find out, let's take a look back at the `WHERE` clause we wrote:
 
